--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
     grid-template-columns: 2fr 1fr;
     background-color: rgb(205, 198, 198);
     font-size: larger;
-    height: 30rem;
+    height: 35rem;
     border-radius: 20px;
 }
 
@@ -13,10 +13,11 @@ p{
 }
 
 .product_container{
-    border: 1px solid black;
-    padding: 5px;
+    border: 3px solid black;
+    padding: 15px;
     margin: 25px;
     background-color: rgb(184, 173, 173);
+    border-radius: 5px;
 }
 
 .App > h1{
@@ -31,11 +32,6 @@ p{
     gap: 2rem;
 }
 
-.table_container{
-    width: fit-content;
-    font-size: larger;
-}
-
 .App{
     display: flex;
     flex-direction: column;
@@ -44,3 +40,30 @@ p{
     height: 100vh;
     background-color: rgb(8, 8, 7);
 }
+
+/* ==========Media  Queries (medium devices) =============*/
+
+@media screen and (max-width: 1024px) {
+    .comparison_table{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: 62rem;
+    }  
+    .App{
+        justify-content: flex-start;
+        align-items: center;
+        height: 74rem;
+        width: 100vw;   
+    }
+ }
+ 
+ /* ==========Media  Queries (small devices) =============*/
+ 
+ @media screen and (max-width: 600px) {
+    .App{
+        align-items: center;
+        height: fit-content;
+        width: fit-content;
+    }
+ }
