--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,15 +7,15 @@
     border-radius: 20px;
 }
 
-p{
+p,h5{
     font-size: large;
     font-weight: bold;
 }
 
 .product_container{
     border: 3px solid black;
-    padding: 15px;
-    margin: 25px;
+    padding: 5px;
+    margin: 10px;
     background-color: rgb(184, 173, 173);
     border-radius: 5px;
 }
@@ -48,13 +48,13 @@ p{
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        height: 62rem;
+        height: fit-content;
     }  
     .App{
         justify-content: flex-start;
         align-items: center;
         height: 74rem;
-        width: 100vw;   
+        width: auto;   
     }
  }
  
@@ -66,4 +66,12 @@ p{
         height: fit-content;
         width: fit-content;
     }
+    .comparison_table{
+        display: flex;
+        flex-direction: column;
+        gap: 0rem;
+        height: fit-content;
+        width: 100vw;
+        margin-bottom: 15px;
+    } 
  }
